# cmd/docs/swagger.json
@@ -166,6 +166,35 @@
                 }
             }
         },
+        "/auth/verify-email/resend": {
+            "post": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "description": "Refresh JWT",
+                "tags": [
+                    "Auth"
+                ],
+                "parameters": [
+                    {
+                        "description": "email address",
+                        "name": "data",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/auth.ResendVerificationEmailRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "204": {
+                        "description": "No Content"
+                    }
+                }
+            }
+        },
         "/auth/verify-email/{token}": {
             "get": {
                 "description": "Verify email with token",
@@ -279,6 +308,17 @@
             "type": "object",
             "properties": {
                 "jwt": {
+                    "type": "string"
+                }
+            }
+        },
+        "auth.ResendVerificationEmailRequest": {
+            "type": "object",
+            "required": [
+                "email"
+            ],
+            "properties": {
+                "email": {
                     "type": "string"
                 }
             }
